# document-redactor

./: .gitignore  pyproject.toml
alembic/: env.py
alembic/versions/: 64f65bd75a9c_initiate.py  8286448b7730_check_current_state.py
app/: core.py  database.py  main.py  models.py  redactor.py  routers.py
app/routers/: pages.py  uploads.py
