[project]
name = "redaction-workflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "easyocr>=1.7.2",
    "fastapi>=0.116.1",
    "gliner[tokenizers]>=0.2.21",
    "huggingface-hub>=0.33.4",
    "ipdb>=0.13.13",
    "onnxruntime>=1.22.1",
    "pillow>=11.3.0",
    "python-multipart>=0.0.20",
    "torch>=2.7.1",
    "transformers>=4.53.2",
    "uvicorn>=0.35.0",
]
